services/cobalt-console/kubernetes/cobalt-console/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cobalt-console
  namespace: cobalto
  labels:
    app: cobalt-console
    component: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: cobalt-console
